my-styles.css
/* font-family: 'Lato', sans-serif;
font-family: 'Source Serif Pro', serif;  'EB Garamond', serif;*/

.skip-link {
  position: absolute;
  width: 1px;
  height 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  border: 0;
}

.skip-link:focus{
  width: unset;
  height: unset;
  position: relative;
  padding: unset;
  margin: unset;
  font-size: 1rem; 
}

html{
font-size: 20px;
}

body {
  margin: 0px;
  background-color: #ccdcc3;
  font-family: 'Source Serif Pro', serif;
}

main {
  width: 90%;
  max-width: 1000px;
  background: #FFF;
  border-radius: 1rem;
  padding: 1rem 2rem;
  box-sizing: border-box;
  margin: 1rem auto;
}

/*beginning updated nav and ul, ol*/

nav{
  color: #E3AD16;
  background-color: #FFFFFF;
  padding: 0;
  display: block;
  margin: 0;
  border-bottom: 3px solid #000;
}

ul,ol {
  list-style-type: none;
  padding-inline-start: 0px;
  margin-block-start: 0px;
  margin-block-end: 0px;
}

/*end of updated nav and ul,ol*/

nav a {
  color: #000000;
}

img {
  max-width: 500px;
  min-width: 100px;
}

h1 {
  font-family: Lato, sans-serif;
  margin: 0;
  font-weight: 600;
  font-size: 2rem;
  padding: inherit;
}

h2{
  font-family: 'Source Serif Pro', serif;
  margin: 0;
  font-weight: 700;
  text-decoration: underline;
  font-size: 1.45rem;
}

h3{
  font-family: 'Source Serif Pro', serif;
  font-weight: 400;
  text-decoration: underline;
  font-size: 1.2rem;
}
p{
  font-family: 'Source Serif Pro', serif;
  margin: 0;
}

a {
  font-weight: bold;
  font-style: italic;
  text-decoration: none;
}

nav li, nav li a {
  width: 100%;
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
}

.active{
  background: #ccdcc3;
  color: #000;
  padding: 1rem;
}

footer{
  background: #FFF;
  color: #000;
  width: 100%;
  margin: 0;
  padding: 1rem;
  box-sizing: border-box;
  text-align: center;
  font-weight: bold;
}

address {
  font-style: normal;
}

/*Media sections*/

.location-holder, .media-holder {
  width: 100%;
  margin: 4rem 0;
  display: flex;
  flex-direction: column;
  gap: 1.2rem;
  box-sizing: border-box;
}

.image-holder, .text-holder {
  width: 100%;
  padding: 15px;
  margin: 0;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
}

.image-holder img {
  width: 100%;
  max-width: 250px;
  margin: 0 auto;
}

/*figure and .gallery-image styles*/

.gallery-image {
  margine-block-start: 0;
  margin-block-end: 0;
  margin-inline-start: 0;
  margin-inline-end:0;
}

.gallery-image img{
  width: 100%;
}
/*When the browser is at least 600px wide*/
@media (min-width: 600px) {



  .media-holder {
    flex-direction: row;

  }

  .image-holder {
    width: 30%;

  }

  .media-list, .text-holder {
    width: 70%;

  }

  nav ul {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
  }

  nav li {
    width: 50%;
  }

}

/*When the browser is at least 800px wide*/
@media (min-width: 800px) {

  .image-holder {
    width: 250px;
  }

  .media-list, .text-holder {
    width: calc(100% - 250px);
  }

  nav li {
    width: 25%;
  }
}
/*width specifically for one image*/

img.autumn-bowls/ingredients.jpeg {
  height: 200px;
  width: auto;
}

